--- a/result/2021-12-26.md
+++ b/result/2021-12-26.md
@@ -15,17 +15,17 @@
 15. [圣诞](https://s.weibo.com//weibo?q=%E5%9C%A3%E8%AF%9E&Refer=top) 489391
 16. [杭州人均住户存款近12万](https://s.weibo.com//weibo?q=%23%E6%9D%AD%E5%B7%9E%E4%BA%BA%E5%9D%87%E4%BD%8F%E6%88%B7%E5%AD%98%E6%AC%BE%E8%BF%9112%E4%B8%87%23&Refer=top) 403162
 17. [花海哭了](https://s.weibo.com//weibo?q=%23%E8%8A%B1%E6%B5%B7%E5%93%AD%E4%BA%86%23&Refer=top) 400374
-18. [央视主持人方言rap介绍家乡美食](https://s.weibo.com//weibo?q=%23%E5%A4%AE%E8%A7%86%E4%B8%BB%E6%8C%81%E4%BA%BA%E6%96%B9%E8%A8%80rap%E4%BB%8B%E7%BB%8D%E5%AE%B6%E4%B9%A1%E7%BE%8E%E9%A3%9F%23&Refer=top) 383525
+18. [央视主持人方言rap介绍家乡美食](https://s.weibo.com//weibo?q=%23%E5%A4%AE%E8%A7%86%E4%B8%BB%E6%8C%81%E4%BA%BA%E6%96%B9%E8%A8%80rap%E4%BB%8B%E7%BB%8D%E5%AE%B6%E4%B9%A1%E7%BE%8E%E9%A3%9F%23&Refer=top) 400185
 19. [徐正疯了吧](https://s.weibo.com//weibo?q=%23%E5%BE%90%E6%AD%A3%E7%96%AF%E4%BA%86%E5%90%A7%23&Refer=top) 336100
 20. [消防员被出警后自己的样子逗笑了](https://s.weibo.com//weibo?q=%23%E6%B6%88%E9%98%B2%E5%91%98%E8%A2%AB%E5%87%BA%E8%AD%A6%E5%90%8E%E8%87%AA%E5%B7%B1%E7%9A%84%E6%A0%B7%E5%AD%90%E9%80%97%E7%AC%91%E4%BA%86%23&Refer=top) 332349
 21. [圣诞节冰岛极光爆发](https://s.weibo.com//weibo?q=%23%E5%9C%A3%E8%AF%9E%E8%8A%82%E5%86%B0%E5%B2%9B%E6%9E%81%E5%85%89%E7%88%86%E5%8F%91%23&Refer=top) 321501
 22. [吐司竟然可以吃出仪式感](https://s.weibo.com//weibo?q=%23%E5%90%90%E5%8F%B8%E7%AB%9F%E7%84%B6%E5%8F%AF%E4%BB%A5%E5%90%83%E5%87%BA%E4%BB%AA%E5%BC%8F%E6%84%9F%23&Refer=top) 320689
 23. [医生站凳子上为400斤男子做手术](https://s.weibo.com//weibo?q=%23%E5%8C%BB%E7%94%9F%E7%AB%99%E5%87%B3%E5%AD%90%E4%B8%8A%E4%B8%BA400%E6%96%A4%E7%94%B7%E5%AD%90%E5%81%9A%E6%89%8B%E6%9C%AF%23&Refer=top) 317921
-24. [我为西安加油](https://s.weibo.com//weibo?q=%E6%88%91%E4%B8%BA%E8%A5%BF%E5%AE%89%E5%8A%A0%E6%B2%B9&Refer=top) 306850
-25. [时代少年团少年时代](https://s.weibo.com//weibo?q=%23%E6%97%B6%E4%BB%A3%E5%B0%91%E5%B9%B4%E5%9B%A2%E5%B0%91%E5%B9%B4%E6%97%B6%E4%BB%A3%23&Refer=top) 303641
-26. [管泽元说Uzi不会走路时就会走位了](https://s.weibo.com//weibo?q=%23%E7%AE%A1%E6%B3%BD%E5%85%83%E8%AF%B4Uzi%E4%B8%8D%E4%BC%9A%E8%B5%B0%E8%B7%AF%E6%97%B6%E5%B0%B1%E4%BC%9A%E8%B5%B0%E4%BD%8D%E4%BA%86%23&Refer=top) 298960
-27. [金硕珍金南俊新冠确诊](https://s.weibo.com//weibo?q=%23%E9%87%91%E7%A1%95%E7%8F%8D%E9%87%91%E5%8D%97%E4%BF%8A%E6%96%B0%E5%86%A0%E7%A1%AE%E8%AF%8A%23&Refer=top) 293681
-28. [陈哲远洗大肠误伤李艺彤](https://s.weibo.com//weibo?q=%23%E9%99%88%E5%93%B2%E8%BF%9C%E6%B4%97%E5%A4%A7%E8%82%A0%E8%AF%AF%E4%BC%A4%E6%9D%8E%E8%89%BA%E5%BD%A4%23&Refer=top) 286383
+24. [陈哲远洗大肠误伤李艺彤](https://s.weibo.com//weibo?q=%23%E9%99%88%E5%93%B2%E8%BF%9C%E6%B4%97%E5%A4%A7%E8%82%A0%E8%AF%AF%E4%BC%A4%E6%9D%8E%E8%89%BA%E5%BD%A4%23&Refer=top) 309065
+25. [我为西安加油](https://s.weibo.com//weibo?q=%E6%88%91%E4%B8%BA%E8%A5%BF%E5%AE%89%E5%8A%A0%E6%B2%B9&Refer=top) 306850
+26. [时代少年团少年时代](https://s.weibo.com//weibo?q=%23%E6%97%B6%E4%BB%A3%E5%B0%91%E5%B9%B4%E5%9B%A2%E5%B0%91%E5%B9%B4%E6%97%B6%E4%BB%A3%23&Refer=top) 303641
+27. [管泽元说Uzi不会走路时就会走位了](https://s.weibo.com//weibo?q=%23%E7%AE%A1%E6%B3%BD%E5%85%83%E8%AF%B4Uzi%E4%B8%8D%E4%BC%9A%E8%B5%B0%E8%B7%AF%E6%97%B6%E5%B0%B1%E4%BC%9A%E8%B5%B0%E4%BD%8D%E4%BA%86%23&Refer=top) 298960
+28. [金硕珍金南俊新冠确诊](https://s.weibo.com//weibo?q=%23%E9%87%91%E7%A1%95%E7%8F%8D%E9%87%91%E5%8D%97%E4%BF%8A%E6%96%B0%E5%86%A0%E7%A1%AE%E8%AF%8A%23&Refer=top) 293681
 29. [五月天好好好想见到你](https://s.weibo.com//weibo?q=%23%E4%BA%94%E6%9C%88%E5%A4%A9%E5%A5%BD%E5%A5%BD%E5%A5%BD%E6%83%B3%E8%A7%81%E5%88%B0%E4%BD%A0%23&Refer=top) 266518
 30. [圣诞树](https://s.weibo.com//weibo?q=%E5%9C%A3%E8%AF%9E%E6%A0%91&Refer=top) 264043
 31. [108元吃蛋花煎饺和猪蹄](https://s.weibo.com//weibo?q=108%E5%85%83%E5%90%83%E8%9B%8B%E8%8A%B1%E7%85%8E%E9%A5%BA%E5%92%8C%E7%8C%AA%E8%B9%84&Refer=top) 261496
@@ -46,8 +46,9 @@
 46. [广东一男子钓鱼钓出鳄鱼](https://s.weibo.com//weibo?q=%23%E5%B9%BF%E4%B8%9C%E4%B8%80%E7%94%B7%E5%AD%90%E9%92%93%E9%B1%BC%E9%92%93%E5%87%BA%E9%B3%84%E9%B1%BC%23&Refer=top) 156208
 47. [脱口秀跨年整活天花板](https://s.weibo.com//weibo?q=%23%E8%84%B1%E5%8F%A3%E7%A7%80%E8%B7%A8%E5%B9%B4%E6%95%B4%E6%B4%BB%E5%A4%A9%E8%8A%B1%E6%9D%BF%23&Refer=top) 154360
 48. [女子泡在空调房里患上暖气病](https://s.weibo.com//weibo?q=%23%E5%A5%B3%E5%AD%90%E6%B3%A1%E5%9C%A8%E7%A9%BA%E8%B0%83%E6%88%BF%E9%87%8C%E6%82%A3%E4%B8%8A%E6%9A%96%E6%B0%94%E7%97%85%23&Refer=top) 138584
-49. [薛之谦怪咖表情](https://s.weibo.com//weibo?q=%23%E8%96%9B%E4%B9%8B%E8%B0%A6%E6%80%AA%E5%92%96%E8%A1%A8%E6%83%85%23&Refer=top) 133351
+49. [薛之谦怪咖表情](https://s.weibo.com//weibo?q=%23%E8%96%9B%E4%B9%8B%E8%B0%A6%E6%80%AA%E5%92%96%E8%A1%A8%E6%83%85%23&Refer=top) 135963
 50. [FPX战胜LNG](https://s.weibo.com//weibo?q=%23FPX%E6%88%98%E8%83%9CLNG%23&Refer=top) 127490
-51. [英语一](https://s.weibo.com//weibo?q=%E8%8B%B1%E8%AF%AD%E4%B8%80&Refer=top) 115958
-52. [地表最强打野花海](https://s.weibo.com//weibo?q=%23%E5%9C%B0%E8%A1%A8%E6%9C%80%E5%BC%BA%E6%89%93%E9%87%8E%E8%8A%B1%E6%B5%B7%23&Refer=top) 111357
-53. [花海总决赛MVP](https://s.weibo.com//weibo?q=%23%E8%8A%B1%E6%B5%B7%E6%80%BB%E5%86%B3%E8%B5%9BMVP%23&Refer=top) 111341
+51. [Amber吴莫愁舞台太炸了](https://s.weibo.com//weibo?q=%23Amber%E5%90%B4%E8%8E%AB%E6%84%81%E8%88%9E%E5%8F%B0%E5%A4%AA%E7%82%B8%E4%BA%86%23&Refer=top) 117567
+52. [英语一](https://s.weibo.com//weibo?q=%E8%8B%B1%E8%AF%AD%E4%B8%80&Refer=top) 115958
+53. [地表最强打野花海](https://s.weibo.com//weibo?q=%23%E5%9C%B0%E8%A1%A8%E6%9C%80%E5%BC%BA%E6%89%93%E9%87%8E%E8%8A%B1%E6%B5%B7%23&Refer=top) 111357
+54. [花海总决赛MVP](https://s.weibo.com//weibo?q=%23%E8%8A%B1%E6%B5%B7%E6%80%BB%E5%86%B3%E8%B5%9BMVP%23&Refer=top) 111341
