--- a/result/2021-12-26.md
+++ b/result/2021-12-26.md
@@ -57,3 +57,4 @@
 57. [花海总决赛MVP](https://s.weibo.com//weibo?q=%23%E8%8A%B1%E6%B5%B7%E6%80%BB%E5%86%B3%E8%B5%9BMVP%23&Refer=top) 111341
 58. [詹姆斯韦伯太空望远镜发射](https://s.weibo.com//weibo?q=%23%E8%A9%B9%E5%A7%86%E6%96%AF%E9%9F%A6%E4%BC%AF%E5%A4%AA%E7%A9%BA%E6%9C%9B%E8%BF%9C%E9%95%9C%E5%8F%91%E5%B0%84%23&Refer=top) 85641
 59. [回顾韦伯望远镜坎坷升空路](https://s.weibo.com//weibo?q=%23%E5%9B%9E%E9%A1%BE%E9%9F%A6%E4%BC%AF%E6%9C%9B%E8%BF%9C%E9%95%9C%E5%9D%8E%E5%9D%B7%E5%8D%87%E7%A9%BA%E8%B7%AF%23&Refer=top) 80375
+60. [林书豪回归CBA](https://s.weibo.com//weibo?q=%23%E6%9E%97%E4%B9%A6%E8%B1%AA%E5%9B%9E%E5%BD%92CBA%23&Refer=top) 19871
